--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PantryManagementSystem</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PantryManagementSystem.styles.css" asp-append-version="true" />
@@ -24,8 +25,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <!-- Left side links -->
+                <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                         @{
                             var user = HttpContextAccessor.HttpContext?.User;
@@ -77,8 +77,7 @@
                         {
                             <li class="nav-item me-2">
                                 <span class="navbar-text">
-                                    <i class="fa-solid fa-user"></i>
-                                    @user.Identity.Name
+                                    <i class="fa-solid fa-user"></i> @user.Identity.Name
                                 </span>
                             </li>
                             <li class="nav-item">
@@ -92,14 +91,10 @@
                         else
                         {
                             <li class="nav-item me-2">
-                                <a class="btn btn-outline-primary btn-sm" asp-controller="Auth" asp-action="Login">
-                                    <i class="fa-solid fa-right-to-bracket"></i> Login
-                                </a>
+                                <a class="btn btn-outline-primary btn-sm" asp-controller="Auth" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary btn-sm" asp-controller="Auth" asp-action="Register">
-                                    <i class="fa-solid fa-user-plus"></i> Register
-                                </a>
+                                <a class="btn btn-primary btn-sm" asp-controller="Auth" asp-action="Register">Register</a>
                             </li>
                         }
                     </ul>
