Functinallity changes order

--- a/Views/PantryItem/Index.cshtml
+++ b/Views/PantryItem/Index.cshtml
@@ -75,14 +75,14 @@
                         else if (isStaff)
                         {
                             <button type="button" class="btn btn-warning btn-sm rounded-pill px-3"
-                                    onclick="location.href='@Url.Action("UpdateQuantity", "PantryItem", new { id = item.Id })'">
+                                    onclick="location.href='@Url.Action("Edit", "PantryItem", new { id = item.Id })'">
                                 <i class="fa-solid fa-boxes-stacked me-1"></i> UpdateQty
                             </button>
                         }
                         else if (isUser)
                         {
                             <button type="button" class="btn btn-success btn-sm rounded-pill px-3"
-                                    onclick="location.href='@Url.Action("RequestItem", "PantryItem", new { id = item.Id })'">
+                                    onclick="location.href='@Url.Action("RequestOrder", "Order", new { id = item.Id })'">
                                 <i class="fa-solid fa-cart-plus me-1"></i> Request
                             </button>
                         }
