--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                     <!-- Admin Navbar -->
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Orders</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="AllOrders">Orders</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Reports" asp-action="Index">Reports</a></li>
                                 }
@@ -50,7 +50,7 @@
                                     <!-- Staff Navbar -->
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Orders</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">Orders</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
                                 }
                                 else if (isUser)
@@ -58,7 +58,7 @@
                                     <!-- User Navbar -->
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">My Orders</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="UserOrdersHistory">My Orders</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="MyBills">My Bills</a></li>
                                 }
                             }
