--- a/Views/Order/RequestOrder.cshtml
+++ b/Views/Order/RequestOrder.cshtml
@@ -1,4 +1,6 @@
-﻿@model PantryManagementSystem.Models.DTO.RequestOrderDTO
+﻿@* To request a specific pantry item (choose quantity, submit). *@
+
+@model PantryManagementSystem.Models.DTO.RequestOrderDTO
 
 <div class="container my-5">
     <h2>Request Pantry Item</h2>
