--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index"> DotWings Pantry </a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"> DotWings </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,25 +39,25 @@
                                 if (isAdmin)
                                 {
                                     <!-- Admin Navbar -->
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="AllOrders">Orders</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Reports" asp-action="Index">Reports</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="AllOrders">Orders</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Admin" asp-action="ManageUsers">Manage Users</a></li>
                                 }
                                 else if (isStaff)
                                 {
                                     <!-- Staff Navbar -->
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">Orders</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">Orders</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
                                 }
                                 else if (isUser)
                                 {
                                     <!-- User Navbar -->
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
+                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="UserOrdersHistory">My Orders</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="MyBills">My Bills</a></li>
                                 }
