Resolved merge conflicts and removed old AuthDb migrations

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                                     // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     // <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="UserOrdersHistory">My Orders</a></li>
-                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="MyBills">My Bills</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="UserBills">My Bills</a></li>
                                 }
                             }
                             else
