Entire Billing Functionality Done.

--- a/Views/Billing/BillResult.cshtml
+++ b/Views/Billing/BillResult.cshtml
@@ -19,7 +19,7 @@
         </div>
 
         <div class="d-flex justify-content-center gap-2 mb-3">
-            <a asp-action="ExportPdf" asp-route-id="@Model.Id" class="btn btn-danger">
+            <a asp-action="DownloadPdf" asp-route-id="@Model.Id" class="btn btn-danger">
                 <i class="fa-solid fa-file-pdf me-1"></i> Download PDF
             </a>
             <a asp-action="ExportExcel" asp-route-id="@Model.Id" class="btn btn-success">
