--- a/Views/Billing/Index.cshtml
+++ b/Views/Billing/Index.cshtml
@@ -49,7 +49,7 @@
                             <a asp-action="Details" asp-route-id="@bill.Id" class="btn btn-info btn-sm text-white me-2">
                                 <i class="fa-solid fa-eye me-1"></i> Show Bill
                             </a>
-                            <a asp-action="ExportPdf" asp-route-id="@bill.Id" class="btn btn-danger btn-sm">
+                            <a asp-action="DownloadPdf" asp-route-id="@bill.Id" class="btn btn-danger btn-sm">
                                 <i class="fa-solid fa-file-pdf me-1"></i> PDF
                             </a>
                         </td>
