--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -223,8 +223,8 @@
                 <div class="list-group shadow-sm">
                     <a class="list-group-item list-group-item-action" asp-controller="PantryItem" asp-action="Index">📦 Pantry Items</a>
                     <a class="list-group-item list-group-item-action" asp-controller="Order" asp-action="AllOrders">🧾 Orders</a>
-                    <a class="list-group-item list-group-item-action" asp-controller="Billing" asp-action="AllBills">💳 Billing</a>
-                    <a class="list-group-item list-group-item-action" asp-controller="Report" asp-action="ConsumptionReport">📊 Reports</a>
+                    <a class="list-group-item list-group-item-action" asp-controller="Billing" asp-action="Index">💳 Billing</a>
+                    @* <a class="list-group-item list-group-item-action" asp-controller="Report" asp-action="ConsumptionReport">📊 Reports</a> *@
                 </div>
             </div>
 
