SYED UPDATED (BILLS)...

--- a/Views/Order/AllOrders.cshtml
+++ b/Views/Order/AllOrders.cshtml
@@ -11,7 +11,7 @@
             <div class="card shadow-sm card-custom">
                 <!-- Card Header -->
                 <div class="card-header text-white text-center mb-3"
-                     style="background: linear-gradient(135deg, #11998e, #38ef7d); border-radius: 12px 12px 0 0;">
+                     style="background: linear-gradient(135deg, #6a11cb, #2575fc); border-radius: 12px 12px 0 0;">
                     <h3>All Orders</h3>
                 </div>
 
